stamping out syntax errors
and fixing table code

--- a/concept/groundwater-level/index.html
+++ b/concept/groundwater-level/index.html
@@ -68,148 +68,123 @@
 				<tbody>
 					<tr>
 						<td>
-						<p>
+
 							<a href="/witness/victim/bendel-charles-s/index.html">Charles Bendel</a>
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							1.5 m
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							near Crematorium V
-						</p>
-						</td>
+												</td>
 					</tr>
 					<tr>
 						<td>
-						<p>
+
 							<a href="/witness/victim/chasan-shaul/index.html">Shaul Chasan</a>
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							4 m
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							near <q><a href="/bunkers/index.html">Bunker</a> 2</q>
-						</p>
-						</td>
+												</td>
 					</tr>
 					<tr>
 						<td>Leon Cohen</td>
 						<td>
-						<p>
+
 							3 m
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							near <q><a href="/bunkers/index.html">Bunker</a> 2</q>
-						</p>
-						</td>
+												</td>
 					</tr>
 					<tr>
 						<td>
-						<p>
+
 							<a href="/witness/victim/dragon-szlama/index.html">Szlama Dragon</a>
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							3 m
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							near Crematorium V
-						</p>
-						</td>
+												</td>
 					</tr>
 					<tr>
 						<td>
-						<p>
+
 							<a href="/witness/victim/jankowski-stanislaw/index.html">Stanisław Jankowski</a>
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							2 m
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							near Crematorium V
-						</p>
-						</td>
+												</td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/marcus-kurt/index.html">Kurt Marcus</a></td>
 						<td>
-						<p>
+
 							4 m
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							near <q><a href="/bunkers/index.html">Bunker</a> 2</q>
-						</p>
-						</td>
+												</td>
 					</tr>
 					<tr>
 						<td>
-						<p>
+
 							<a href="/witness/victim/muller-filip/index.html">Filip Müller</a>
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							2 m
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							near Crematorium V
-						</p>
-						</td>
+												</td>
 					</tr>
 					<tr>
 						<td>
-						<p>
+
 							<a href="/witness/victim/nyiszli-miklos/index.html">Miklós Nyiszli</a>
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							3 m
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							near <q><a href="/bunkers/index.html">Bunker</a> 2</q>
-						</p>
-						</td>
+												</td>
 					</tr>
 					<tr>
 						<td>
-						<p>
+
 							<a href="/witness/victim/rosenblum-joshuah/index.html">Joshuah Rosenblum</a>
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							2 m
-						</p>
-						</td>
+												</td>
 						<td>
-						<p>
+
 							unspecified
-						</p>
-						</td>
+												</td>
 					</tr>
 				</tbody>
 				<tfoot>
@@ -220,7 +195,7 @@
 					</p>
 					</td>
 				</tr>
-				</tbody>
+				</tfoot>
 			</table>
 			<p>
 				For similar reasons, mass graves dug in the vicinity of the <a href="/instruments/camp/mixed-purpose-camp/birkenau/index.html">Birkenau Camp</a> could not have been much deeper than a meter &mdash; not only because they would, again, have filled quickly with water, but more importantly, submersing corpses in groundwater contaminates it. Bacteria and viruses diffuse from corpses soaked in water, and would very adversely affect the health of all those drinking water in the region.
