--- a/document/hofle-hans/index.html
+++ b/document/hofle-hans/index.html
@@ -32,73 +32,66 @@
 			<p>
 				Most famously, Höfle is the author of a telegram sent on 11 January 1943 to the commander of the security police in Krakow. This telegram was intercepted and <a href="/british-radio-intercepts/index.html">deciphered</a> by the British, who documented and archived it. The telegram gives the reported numbers of arrivals (<i>Zugang</i>) within <q><a href="/event/aktion-reinhardt/index.html">Operation (<i>Einsatz</i>) Reinhar[d]t</a></q> for the last two weeks of 1942, and totals as of end of 1942 for locations abbreviated with L, B, S, and T, which are commonly interpreted as Lublin (<a href="/instruments/camp/majdanek/index.html">Majdanek</a>), <a href="/instruments/camp/pure-extermination-camp/belzec/index.html">Belzec</a>, <a href="/location/camps/sobibor/index.html">Sobibór</a> and <a href="/instruments/camp/pure-extermination-camp/treblinka/index.html">Treblinka</a>. The figures are:
 			</p>
-			<table class="alternate ctab" style="width: 58.8538%; height: 204px;" cellspacing="0" cellpadding="2">
-				<tbody>
+			<table class="table">
+				<thead>
 					<tr>
-						<th style="width: 11.2868%; height: 34px;">Location</th>
-						<th style="width: 27.4339%; height: 34px;">Last fortnight 1942</th>
-						<th style="width: 13.6262%; height: 34px;">Totals</th>
+						<th>Location</th>
+						<th>Last fortnight 1942</th>
+						<th>Totals</th>
 					</tr>
+				</thead>
+<tbody>
 					<tr>
-						<td style="width: 11.2868%; height: 34px;"><a href="/instruments/camp/majdanek/index.html">L[ublin]</a></td>
-						<td style="width: 27.4339%; height: 34px;">
-						<p>
+						<td><a href="/instruments/camp/majdanek/index.html">L[ublin]</a></td>
+						<td>
+
 							12,761
-						</p>
-						</td>
-						<td style="width: 13.6262%; height: 34px;">
-						<p>
+												</td>
+						<td>
+
 							24,733
-						</p>
-						</td>
+												</td>
 					</tr>
 					<tr>
-						<td style="width: 11.2868%; height: 34px;"><a href="/instruments/camp/pure-extermination-camp/belzec/index.html">B[elzec]</a></td>
-						<td style="width: 27.4339%; height: 34px;">
-						<p>
+						<td><a href="/instruments/camp/pure-extermination-camp/belzec/index.html">B[elzec]</a></td>
+						<td>
+
 							0
-						</p>
-						</td>
-						<td style="width: 13.6262%; height: 34px;">
-						<p>
+												</td>
+						<td>
+
 							434,508
-						</p>
-						</td>
+												</td>
 					</tr>
 					<tr>
-						<td style="width: 11.2868%; height: 34px;"><a href="/location/camps/sobibor/index.html">S[obibór]</a></td>
-						<td style="width: 27.4339%; height: 34px;">
-						<p>
+						<td><a href="/location/camps/sobibor/index.html">S[obibór]</a></td>
+						<td>
+
 							515
-						</p>
-						</td>
-						<td style="width: 13.6262%; height: 34px;">
-						<p>
+												</td>
+						<td>
+
 							101,370
-						</p>
-						</td>
+												</td>
 					</tr>
 					<tr>
-						<td style="width: 11.2868%; height: 34px;"><a href="/instruments/camp/pure-extermination-camp/treblinka/index.html">T[reblinka]</a></td>
-						<td style="width: 27.4339%; height: 34px;">
-						<p>
+						<td><a href="/instruments/camp/pure-extermination-camp/treblinka/index.html">T[reblinka]</a></td>
+						<td>
+
 							10,335
-						</p>
-						</td>
-						<td style="width: 13.6262%; height: 34px;">
-						<p>
+												</td>
+						<td>
+
 							713,55[5]
-						</p>
-						</td>
+												</td>
 					</tr>
 					<tr>
-						<td style="width: 11.2868%; height: 34px;">Total</td>
-						<td style="width: 27.4339%; height: 34px;"></td>
-						<td style="width: 13.6262%; height: 34px;">
-						<p>
+						<td>Total</td>
+						<td></td>
+						<td>
+
 							1,274,166
-						</p>
-						</td>
+												</td>
 					</tr>
 				</tbody>
 			</table>
