--- a/historical-person/politician/goebbels-joseph/index.html
+++ b/historical-person/politician/goebbels-joseph/index.html
@@ -51,7 +51,7 @@
 			</p>
 			<blockquote>
 				<p>
-					the Führer does not want the Jews to be evacuated to Siberia. [&hellip;] He would much prefer to resettle them in central Africa. [&hellip;] In any case, the Führer&rsquo;s goal is to make Western Europe completely Jew-free. They can no longer have their homeland here.<q>
+					the Führer does not want the Jews to be evacuated to Siberia. [&hellip;] He would much prefer to resettle them in central Africa. [&hellip;] In any case, the Führer&rsquo;s goal is to make Western Europe completely Jew-free. They can no longer have their homeland here.
 				</p>
 			</blockquote>
 			<p>
