--- a/historical-person/politician/mengele-josef/index.html
+++ b/historical-person/politician/mengele-josef/index.html
@@ -34,8 +34,9 @@
 			</p>
 			<blockquote>
 				<p>
-					He has particularly distinguished himself in the fulfillment of the [tasks] assigned to him and, beyond his service, has still been active with urgent scientific problems in the research of the racial affiliation of the Gypsies. In addition, he has regularly collaborated in the completion of special tasks. In the course of his medical duties in combating the severe typhus epidemic in Auschwitz CC, he became infected himself and contracted a very severe typhus disease, after he had already contracted severe malaria in June/July 1943, also in the course of his duties at Auschwitz CC.</q> (See <a href="/bibliography/index.html#Mattogno2023">Mattogno 2023</a>, Part 1, p. 375.)
+					He has particularly distinguished himself in the fulfillment of the [tasks] assigned to him and, beyond his service, has still been active with urgent scientific problems in the research of the racial affiliation of the Gypsies. In addition, he has regularly collaborated in the completion of special tasks. In the course of his medical duties in combating the severe typhus epidemic in Auschwitz CC, he became infected himself and contracted a very severe typhus disease, after he had already contracted severe malaria in June/July 1943, also in the course of his duties at Auschwitz CC.
 				</p>
+				<small>See <a href="/bibliography/index.html#Mattogno2023">Mattogno 2023</a>, Part 1, p. 375.</small>
 			</blockquote>
 			<p>
 				On 19 August 1944, his boss, the garrison physician of the Auschwitz Camp, Dr. <a href="/witness/perpetrator/wirths-eduard/index.html">Eduard Wirths</a>, wrote a professional evaluation of Mengele, in which he stated:
@@ -48,8 +49,9 @@
 					In addition, as an anthropologist, he has eagerly used the short time he had left off duty to further his own education, and has made a valuable contribution to anthropological science in his work by evaluating the scientific material available to him on the basis of his official position. His achievements are therefore to be described as outstanding. [&hellip;] He is catholic. [&hellip;] In the most conscientious performance of his medical duties, he contracted typhus while fighting the epidemic in Auschwitz. [&hellip;]
 				</p>
 				<p>
-					In addition to his medical knowledge, Dr. M. possesses special knowledge as an anthropologist. He appears quite suitable for any other assignment and also for the next higher assignment. He has no criminal record. As an SS doctor, he is popular and respected everywhere [even among inmates&hellip;].</q> (<a href="/bibliography/index.html#Mattogno2023"><i>Ibid</i></a>., p. 447)
+					In addition to his medical knowledge, Dr. M. possesses special knowledge as an anthropologist. He appears quite suitable for any other assignment and also for the next higher assignment. He has no criminal record. As an SS doctor, he is popular and respected everywhere [even among inmates &hellip;].
 				</p>
+				<small><a href="/bibliography/index.html#Mattogno2023"><i>Ibid</i></a>., p. 447</small>
 			</blockquote>
 			<p>
 				Israeli historian Efraim Zuroff discovered that Mengele&rsquo;s image among former Auschwitz inmates who were interviewed right after the war was rather harmless. His image as the <q>Angel of Death,</q> who is said to have committed unspeakable atrocities, particularly on twin children, has evolved only slowly over the decades (<a href="/bibliography/index.html#Zuroff">Zuroff 1994</a>, pp. 127f.). In the same vein, the German professional <q>Nazi hunter</q> Adalbert Rückerl mentioned once in passing that witnesses in Australia, where media and educational campaigns about the Holocaust had been virtually non-existing for the first three decades after the war, could no longer remember any details of what happened in the camps during the war, quite in contrast to witnesses in Europe, the USA, and Israel where the Holocaust had always been a topic of public discourse (<a href="/bibliography/index.html#Ruckerl">Rückerl 1984</a>, pp. 258f.). The <i>Times of Israel</i> wrote about historians realizing that something is wrong when almost every Auschwitz survivor testifying in later years was convinced that it was Mengele who selected them for this or that fate (<a href="/bibliography/index.html#Mark">Mark 2020</a>).
