--- a/instruments/camp/mixed-purpose-camp/sachsenhausen/index.html
+++ b/instruments/camp/mixed-purpose-camp/sachsenhausen/index.html
@@ -102,8 +102,9 @@
 			</p>
 			<blockquote>
 				<p>
-					In any case, together with other prisoners I personally had the &lsquo;fun&rsquo; of installing a gas chamber and shooting facility in the Russian camp at Oranienburg (Sachsenhausen), which did not exist until then.</q> (Schirmer 1992, pp. 49f.)
+					In any case, together with other prisoners I personally had the &lsquo;fun&rsquo; of installing a gas chamber and shooting facility in the Russian camp at Oranienburg (Sachsenhausen), which did not exist until then.
 				</p>
+				<small>Schirmer 1992, pp. 49f.</small>
 			</blockquote>
 			<p>
 				If true, that mock facility was probably removed later, when the camp was turned into a concentration camp for political prisoners of Communist East Germany, as they had no use for such mock facilities, or so one would hope. At any rate, there is neither documental nor material proof for Schirmer&rsquo;s claim either.
