--- a/instruments/ghetto/warsaw-ghetto/index.html
+++ b/instruments/ghetto/warsaw-ghetto/index.html
@@ -40,7 +40,7 @@
 			</p>
 			<blockquote>
 				<p>
-					In the area of the former Warsaw Ghetto, the Germans built gas chambers, which went into operation for the first time on 17 October of this year [1943]. Since then, they have been killing ten [sic] people a day there.
+					In the area of the former Warsaw Ghetto, the Germans built gas chambers, which went into operation for the first time on 17 October of this year [1943]. Since then, they have been killing ten [<i>sic</i>] people a day there.
 				</p>
 			</blockquote>
 			<p>
