--- a/instruments/tool/open-air-incinerations/index.html
+++ b/instruments/tool/open-air-incinerations/index.html
@@ -43,59 +43,31 @@
 				<tbody>
 					<tr>
 						<td><a href="/camp/pure-extermination-camp/chelmno/index.html">Chełmno</a></td>
-						<td>
-						<p>
-							summer 1942
-						</p>
-						</td>
+						<td> summer 1942 </td>
 					</tr>
 					<tr>
 						<td><a href="/camp/mixed-purpose-camp/auschwitz/index.html">Auschwitz</a></td>
-						<td>
-						<p>
-							late September 1942
-						</p>
-						</td>
+						<td> late September 1942 </td>
 					</tr>
 					<tr>
 						<td><a href="/location/camps/sobibor/index.html">Sobibór</a></td>
-						<td>
-						<p>
-							October 1942
-						</p>
-						</td>
+						<td> October 1942 </td>
 					</tr>
 					<tr>
 						<td><a href="/camp/pure-extermination-camp/belzec/index.html">Belzec</a></td>
-						<td>
-						<p>
-							January 1943
-						</p>
-						</td>
+						<td> January 1943 </td>
 					</tr>
 					<tr>
 						<td><a href="/camp/majdanek/index.html">Majdanek</a></td>
-						<td>
-						<p>
-							February 1943
-						</p>
-						</td>
+						<td> February 1943 </td>
 					</tr>
 					<tr>
 						<td><a href="/camp/pure-extermination-camp/treblinka/index.html">Treblinka</a></td>
-						<td>
-						<p>
-							April 1943
-						</p>
-						</td>
+						<td> April 1943 </td>
 					</tr>
 					<tr>
 						<td><a href="/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a></td>
-						<td>
-						<p>
-							July 1943
-						</p>
-						</td>
+						<td> July 1943 </td>
 					</tr>
 				</tbody>
 			</table>
@@ -271,634 +243,158 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/bendel-charles-s/index.html">Charles Bendel</a>
-						</p>
-						</td>
-						<td>
-						<p>
-							3
-						</p>
-						</td>
-						<td>
-						<p>
-							12 m
-						</p>
-						</td>
-						<td>
-						<p>
-							6 m
-						</p>
-						</td>
-						<td>
-						<p>
-							1.5 m
-						</p>
-						</td>
-						<td>
-						<p>
-							near Crematorium V
-						</p>
-						</td>
-						<td>
-						<p>
-							333
-						</p>
-						</td>
-						<td>
-						<p>
-							1 hour
-						</p>
-						</td>
-						<td>
-						<p>
-							83 t
-						</p>
-						</td>
-						<td>
-						<p>
-							1.8 m
-						</p>
-						</td>
+						<td> <a href="/witness/victim/bendel-charles-s/index.html">Charles Bendel</a> </td>
+						<td> 3 </td>
+						<td> 12 m </td>
+						<td> 6 m </td>
+						<td> 1.5 m </td>
+						<td> near Crematorium V </td>
+						<td> 333 </td>
+						<td> 1 hour </td>
+						<td> 83 t </td>
+						<td> 1.8 m </td>
 					</tr>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/chasan-shaul/index.html">Shaul Chasan</a>
-						</p>
-						</td>
-						<td>
-						<p>
-							1
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							4 m
-						</p>
-						</td>
-						<td>
-						<p>
-							near <q><a href="/concept/bunkers/index.html">Bunker</a> 2</q>
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
+						<td> <a href="/witness/victim/chasan-shaul/index.html">Shaul Chasan</a> </td>
+						<td> 1 </td>
+						<td> &mdash; </td>
+						<td> &mdash; </td>
+						<td> 4 m </td>
+						<td> near <q><a href="/concept/bunkers/index.html">Bunker</a> 2</q> </td>
+						<td> &mdash; </td>
+						<td> &mdash; </td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/dragon-szlama/index.html">Szlama Dragon</a>
-						</p>
-						</td>
-						<td>
-						<p>
-							5
-						</p>
-						</td>
-						<td>
-						<p>
-							25 m
-						</p>
-						</td>
-						<td>
-						<p>
-							6 m
-						</p>
-						</td>
-						<td>
-						<p>
-							3 m
-						</p>
-						</td>
-						<td>
-						<p>
-							near Crematorium V
-						</p>
-						</td>
-						<td>
-						<p>
-							1,000
-						</p>
-						</td>
-						<td>
-						<p>
-							1 day
-						</p>
-						</td>
-						<td>
-						<p>
-							250 t
-						</p>
-						</td>
-						<td>
-						<p>
-							2.6 m
-						</p>
-						</td>
+						<td> <a href="/witness/victim/dragon-szlama/index.html">Szlama Dragon</a> </td>
+						<td> 5 </td>
+						<td> 25 m </td>
+						<td> 6 m </td>
+						<td> 3 m </td>
+						<td> near Crematorium V </td>
+						<td> 1,000 </td>
+						<td> 1 day </td>
+						<td> 250 t </td>
+						<td> 2.6 m </td>
 					</tr>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/jankowski-stanislaw/index.html">Stanisław Jankowski</a>
-						</p>
-						</td>
-						<td>
-						<p>
-							2
-						</p>
-						</td>
-						<td>
-						<p>
-							20 m
-						</p>
-						</td>
-						<td>
-						<p>
-							2 m
-						</p>
-						</td>
-						<td>
-						<p>
-							2 m
-						</p>
-						</td>
-						<td>
-						<p>
-							near Crematorium V
-						</p>
-						</td>
-						<td>
-						<p>
-							2,000
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							500 t
-						</p>
-						</td>
-						<td>
-						<p>
-							19.4 m
-						</p>
-						</td>
+						<td> <a href="/witness/victim/jankowski-stanislaw/index.html">Stanisław Jankowski</a> </td>
+						<td> 2 </td>
+						<td> 20 m </td>
+						<td> 2 m </td>
+						<td> 2 m </td>
+						<td> near Crematorium V </td>
+						<td> 2,000 </td>
+						<td> &mdash; </td>
+						<td> 500 t </td>
+						<td> 19.4 m </td>
 					</tr>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/mandelbaum-henryk/index.html">Henryk Mandelbaum</a>
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							30-35 m
-						</p>
-						</td>
-						<td>
-						<p>
-							15 m
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							near Crematorium V
-						</p>
-						</td>
-						<td>
-						<p>
-							1,500-1,800
-						</p>
-						</td>
-						<td>
-						<p>
-							1-2 days
-						</p>
-						</td>
-						<td>
-						<p>
-							375-450 t
-						</p>
-						</td>
-						<td>
-						<p>
-							1.1-1.3 m
-						</p>
-						</td>
+						<td> <a href="/witness/victim/mandelbaum-henryk/index.html">Henryk Mandelbaum</a> </td>
+						<td> &mdash; </td>
+						<td> 30-35 m </td>
+						<td> 15 m </td>
+						<td> &mdash; </td>
+						<td> near Crematorium V </td>
+						<td> 1,500-1,800 </td>
+						<td> 1-2 days </td>
+						<td> 375-450 t </td>
+						<td> 1.1-1.3 m </td>
 					</tr>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/muller-filip/index.html">Filip Müller</a>
-						</p>
-						</td>
-						<td>
-						<p>
-							5
-						</p>
-						</td>
-						<td>
-						<p>
-							40-50 m
-						</p>
-						</td>
-						<td>
-						<p>
-							8 m
-						</p>
-						</td>
-						<td>
-						<p>
-							2 m
-						</p>
-						</td>
-						<td>
-						<p>
-							near Crematorium V
-						</p>
-						</td>
-						<td>
-						<p>
-							1,200
-						</p>
-						</td>
-						<td>
-						<p>
-							5-6 hours
-						</p>
-						</td>
-						<td>
-						<p>
-							300 t
-						</p>
-						</td>
-						<td>
-						<p>
-							1.2 m
-						</p>
-						</td>
+						<td> <a href="/witness/victim/muller-filip/index.html">Filip Müller</a> </td>
+						<td> 5 </td>
+						<td> 40-50 m </td>
+						<td> 8 m </td>
+						<td> 2 m </td>
+						<td> near Crematorium V </td>
+						<td> 1,200 </td>
+						<td> 5-6 hours </td>
+						<td> 300 t </td>
+						<td> 1.2 m </td>
 					</tr>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/muller-filip/index.html">Filip Müller</a>
-						</p>
-						</td>
-						<td>
-						<p>
-							4
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							near <q><a href="/concept/bunkers/index.html">Bunker</a> 2</q>
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
+						<td> <a href="/witness/victim/muller-filip/index.html">Filip Müller</a> </td>
+						<td> 4 </td>
+						<td> &mdash; </td>
+						<td> &mdash; </td>
+						<td> &mdash; </td>
+						<td> near <q><a href="/concept/bunkers/index.html">Bunker</a> 2</q> </td>
+						<td> &mdash; </td>
+						<td> &mdash; </td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/nyiszli-miklos/index.html">Miklós Nyiszli</a>
-						</p>
-						</td>
-						<td>
-						<p>
-							2
-						</p>
-						</td>
-						<td>
-						<p>
-							50 m
-						</p>
-						</td>
-						<td>
-						<p>
-							6 m
-						</p>
-						</td>
-						<td>
-						<p>
-							3 m
-						</p>
-						</td>
-						<td>
-						<p>
-							near <q><a href="/concept/bunkers/index.html">Bunker</a> 2&#8243;
-						</p>
-						</td>
-						<td>
-						<p>
-							2,500
-						</p>
-						</td>
-						<td>
-						<p>
-							1 day
-						</p>
-						</td>
-						<td>
-						<p>
-							625 t
-						</p>
-						</td>
-						<td>
-						<p>
-							3.2 m
-						</p>
-						</td>
+						<td> <a href="/witness/victim/nyiszli-miklos/index.html">Miklós Nyiszli</a> </td>
+						<td> 2 </td>
+						<td> 50 m </td>
+						<td> 6 m </td>
+						<td> 3 m </td>
+						<td> near <q><a href="/concept/bunkers/index.html">Bunker</a> 2</q> </td>
+						<td> 2,500 </td>
+						<td> 1 day </td>
+						<td> 625 t </td>
+						<td> 3.2 m </td>
 					</tr>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/paisikovic-dov/index.html">Dov Paisikovic</a>
-						</p>
-						</td>
-						<td>
-						<p>
-							2
-						</p>
-						</td>
-						<td>
-						<p>
-							30 m
-						</p>
-						</td>
-						<td>
-						<p>
-							6-10 m
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							near <q><a href="/concept/bunkers/index.html">Bunker</a> 2</q>
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
+						<td> <a href="/witness/victim/paisikovic-dov/index.html">Dov Paisikovic</a> </td>
+						<td> 2 </td>
+						<td> 30 m </td>
+						<td> 6-10 m </td>
+						<td> &mdash; </td>
+						<td> near <q><a href="/concept/bunkers/index.html">Bunker</a> 2</q> </td>
+						<td> &mdash; </td>
+						<td> &mdash; </td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/rosenblum-joshuah/index.html">Joshuah Rosenblum</a>
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							10 m
-						</p>
-						</td>
-						<td>
-						<p>
-							5 m
-						</p>
-						</td>
-						<td>
-						<p>
-							2 m
-						</p>
-						</td>
-						<td>
-						<p>
-							unspecified
-						</p>
-						</td>
-						<td>
-						<p>
-							2,000
-						</p>
-						</td>
-						<td>
-						<p>
-							2-3 hours
-						</p>
-						</td>
-						<td>
-						<p>
-							500 t
-						</p>
-						</td>
-						<td>
-						<p>
-							15.5 m
-						</p>
-						</td>
+						<td> <a href="/witness/victim/rosenblum-joshuah/index.html">Joshuah Rosenblum</a> </td>
+						<td> &mdash; </td>
+						<td> 10 m </td>
+						<td> 5 m </td>
+						<td> 2 m </td>
+						<td> unspecified </td>
+						<td> 2,000 </td>
+						<td> 2-3 hours </td>
+						<td> 500 t </td>
+						<td> 15.5 m </td>
 					</tr>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/rosin-arnost/index.html">Arnošt Rosin</a>‡
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							30 m
-						</p>
-						</td>
-						<td>
-						<p>
-							15 m
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							unspecified
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
+						<td> <a href="/witness/victim/rosin-arnost/index.html">Arnošt Rosin</a>‡ </td>
+						<td> &mdash; </td>
+						<td> 30 m </td>
+						<td> 15 m </td>
+						<td> &mdash; </td>
+						<td> unspecified </td>
+						<td> &mdash; </td>
+						<td> &mdash; </td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/tauber-henryk/index.html">Henryk Tauber</a>
-						</p>
-						</td>
-						<td>
-						<p>
-							4-5
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							near Crematorium V
-						</p>
-						</td>
-						<td>
-						<p>
-							&gt; 400
-						</p>
-						</td>
-						<td>
-						<p>
-							2 days
-						</p>
-						</td>
-						<td>
-						<p>
-							100 t
-						</p>
-						</td>
+						<td> <a href="/witness/victim/tauber-henryk/index.html">Henryk Tauber</a> </td>
+						<td> 4-5 </td>
+						<td> &mdash; </td>
+						<td> &mdash; </td>
+						<td> &mdash; </td>
+						<td> near Crematorium V </td>
+						<td> &gt; 400 </td>
+						<td> 2 days </td>
+						<td> 100 t </td>
 						<td></td>
 					</tr>
 					<tr>
-						<td>
-						<p>
-							<a href="/witness/victim/venezia-shlomo/index.html">Shlomo Venezia</a>
-						</p>
-						</td>
-						<td>
-						<p>
-							1
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							near <q><a href="/concept/bunkers/index.html">Bunker</a> 2</q>
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
-						<td>
-						<p>
-							&mdash;
-						</p>
-						</td>
+						<td> <a href="/witness/victim/venezia-shlomo/index.html">Shlomo Venezia</a> </td>
+						<td> 1 </td>
+						<td> &mdash; </td>
+						<td> &mdash; </td>
+						<td> &mdash; </td>
+						<td> near <q><a href="/concept/bunkers/index.html">Bunker</a> 2</q> </td>
+						<td> &mdash; </td>
+						<td> &mdash; </td>
 						<td></td>
 						<td></td>
 					</tr>
