--- a/location/other-locations/madagascar/index.html
+++ b/location/other-locations/madagascar/index.html
@@ -50,7 +50,7 @@
 					The big plan for the evacuation (<i>Evakuierung</i>) of the Jews from Berlin was approved. Additionally, all the Jews of Europe are supposed to be deported (<i>deportiert</i>) to Madagascar after the war. (26 July 1940)
 				</p>
 				<p>
-					<q>Later on, we want to ship (<i>verfrachten</i>) the Jews to Madagascar. There they can build their own state. (17 August 1940)
+					Later on, we want to ship (<i>verfrachten</i>) the Jews to Madagascar. There they can build their own state. (17 August 1940)
 				</p>
 			</blockquote>
 			<p>
