--- a/u/nav.htm
+++ b/u/nav.htm
@@ -1,4 +1,4 @@
-<ol class="breadcrumb">
+<!-- #bbpragma doctype="html5" root_element="body" encoding="utf-8" --><ol class="breadcrumb">
 	<li><a class="btn btn-default" href="/index.html"><span class="glyphicon glyphicon-home"></span></a></li>
 	<li class="active">U</li>
 </ol>
