--- a/witness/perpetrator/broad-pery-s/index.html
+++ b/witness/perpetrator/broad-pery-s/index.html
@@ -53,7 +53,7 @@
 			</p>
 			<blockquote>
 				<p>
-					Perry [sic] Broad has recently given much useful information. He should therefore receive as good treatment as is possible within ALTONA Prison.
+					Perry [<i>sic</i>] Broad has recently given much useful information. He should therefore receive as good treatment as is possible within ALTONA Prison.
 				</p>
 			</blockquote>
 			<p>
