--- a/witness/victim/blaha-franz/index.html
+++ b/witness/victim/blaha-franz/index.html
@@ -37,7 +37,7 @@
 			</p>
 			<blockquote>
 				<p>
-					Well, Dr. Rascher made exclusively [sic] so-called Air Force experiments in the camp. He was a major in the Air Force and was assigned to investigate the conditions to which parachutists were subjected and, secondly, the conditions of those people who had to make an emergency landing on the sea or had fallen into the sea.
+					Well, Dr. Rascher made exclusively [<i>sic</i>] so-called Air Force experiments in the camp. He was a major in the Air Force and was assigned to investigate the conditions to which parachutists were subjected and, secondly, the conditions of those people who had to make an emergency landing on the sea or had fallen into the sea.
 				</p>
 			</blockquote>
 			<p>
