--- a/witness/victim/glazar-richard/index.html
+++ b/witness/victim/glazar-richard/index.html
@@ -32,25 +32,15 @@
 			<table class="table">
 				<tbody>
 					<tr>
-						<td>
+						<td> <a href="/bibliography/index.html#Willenberg">Willenberg 1989</a>, pp. 104f.:
 						<p>
-							<a href="/bibliography/index.html#Willenberg">Willenberg 1989</a>, pp. 104f.:
-						</p>
-						<p>
-							<q><i>A slightly strange crowd spilled out &mdash; people with dark faces, curly, raven-black hair, and a foreign tongue on their lips.</i> [&hellip;] <i>Every last one of them exited the cars in a state of total calm.</i> [&hellip; The SS man] <i>Mitte found three Greeks with a command of German and drafted them as interpreters.</i></q>
-						</p>
-						</td>
-						<td>
-						<p>
-							<a href="/bibliography/index.html#Glazar">Glazar 1995</a>, pp. 89, 93
-						</p>
+							<q><i>A slightly strange crowd spilled out &mdash; people with dark faces, curly, raven-black hair, and a foreign tongue on their lips.</i> [&hellip;] <i>Every last one of them exited the cars in a state of total calm.</i> [&hellip; The SS man] <i>Mitte found three Greeks with a command of German and drafted them as interpreters.</i></q> </td>
+						<td> <a href="/bibliography/index.html#Glazar">Glazar 1995</a>, pp. 89, 93
 						<p>
 							<q><i>People climb calmly out of the cars, </i>[&hellip;] <i>Their faces look healthy, and they have an unusual dark complexion. Black hair &mdash; all I see black to pitch-black hair.</i> [&hellip;] <i>I can hear that the people are speaking a completely foreign language.</i></q>
 						</p>
 						<p>
-							<q><i>Three were chosen from this transport.</i> [&hellip;] <i>They can speak a little, a very little German. Through them the others were informed</i> [&hellip;].</q>
-						</p>
-						</td>
+							<q><i>Three were chosen from this transport.</i> [&hellip;] <i>They can speak a little, a very little German. Through them the others were informed</i> [&hellip;].</q> </td>
 					</tr>
 				</tbody>
 			</table>
