--- a/witness/victim/kersch-silvia/index.html
+++ b/witness/victim/kersch-silvia/index.html
@@ -25,7 +25,7 @@
 			</p>
 			<blockquote>
 				<p>
-					Tremblika [sic] was called the people&rsquo;s factory, where thousands of people perished every day. There were &lsquo;4 big furnaces&rsquo; in which people were thrown alive for cremation. The sight was terrible. In a dense forest, a red ground-level building and 4 tall chimneys.
+					Tremblika [<i>sic</i>] was called the people&rsquo;s factory, where thousands of people perished every day. There were &lsquo;4 big furnaces&rsquo; in which people were thrown alive for cremation. The sight was terrible. In a dense forest, a red ground-level building and 4 tall chimneys.
 				</p>
 			</blockquote>
 			<p>
