--- a/historical-person/legal-professional/lukaszkiewicz-zdzislaw/index.html
+++ b/historical-person/legal-professional/lukaszkiewicz-zdzislaw/index.html
@@ -32,104 +32,46 @@
 			<p>
 				Along the way, Łukaszkiewicz also trimmed down the outrageously inflated death-toll claims of the immediate postwar era to a level that seemed credible, at least to the uninitiated observer. Most of these figures, as well as the murder methods, have been accepted largely by mainstream historians to this day, with the exception of the <a href="/instruments/camp/majdanek/index.html">Majdanek Camp</a>, where further radical downward revisions have been made since. (See the table.)
 			</p>
-			<table class="ctab alternate" cellspacing="0" cellpadding="2">
-				<tbody>
+			<table class="table">
+				<thead>
 					<tr>
 						<th>Camp</th>
 						<th>Peak Claimed<br />
 						Death Toll</th>
-						<th>Łukaszkiewicz&rsquo;s Death Toll</th>
-						<th>Today&rsquo;s Orthodox Death Toll</th>
+						<th>Łukaszkiewicz&rsquo;s<br>Death Toll</th>
+						<th>Today&rsquo;s Orthodox<br>Death Toll</th>
 						<th>Probable<br />
 						Death Toll</th>
 					</tr>
+				</thead>
+				<tbody>
 					<tr>
 						<td><a href="/instruments/camp/pure-extermination-camp/treblinka/index.html">Treblinka</a></td>
-						<td> 
-						<p>
-							&gt;3 million
-						</p>
-						</td>
+						<td> &gt;3 million </td>
 						<td>800,000</td>
-						<td> 
-						<p>
-							~800,000
-						</p>
-						</td>
-						<td> 
-						<p>
-							25,000?
-						</p>
-						</td>
+						<td> ~800,000 </td>
+						<td> 25,000? </td>
 					</tr>
 					<tr>
 						<td><a href="/location/camps/sobibor/index.html">Sobibór</a></td>
-						<td> 
-						<p>
-							2 million
-						</p>
-						</td>
-						<td> 
-						<p>
-							250,000
-						</p>
-						</td>
-						<td> 
-						<p>
-							170,000-250,000
-						</p>
-						</td>
-						<td> 
-						<p>
-							10,000?
-						</p>
-						</td>
+						<td> 2 million </td>
+						<td> 250,000 </td>
+						<td> 170,000-250,000 </td>
+						<td> 10,000? </td>
 					</tr>
 					<tr>
 						<td><a href="/instruments/camp/majdanek/index.html">Majdanek </a></td>
-						<td> 
-						<p>
-							2 million
-						</p>
-						</td>
-						<td> 
-						<p>
-							360,000
-						</p>
-						</td>
-						<td> 
-						<p>
-							78,000
-						</p>
-						</td>
-						<td> 
-						<p>
-							ca. 42,000
-						</p>
-						</td>
+						<td> 2 million </td>
+						<td> 360,000 </td>
+						<td> 78,000 </td>
+						<td> ca. 42,000 </td>
 					</tr>
 					<tr>
 						<td><a href="/location/camps/stutthof/index.html">Stutthof</a></td>
-						<td> 
-						<p>
-							1.3 million
-						</p>
-						</td>
-						<td> 
-						<p>
-							65,000
-						</p>
-						</td>
-						<td> 
-						<p>
-							65,000
-						</p>
-						</td>
-						<td> 
-						<p>
-							26,100
-						</p>
-						</td>
+						<td> 1.3 million </td>
+						<td> 65,000 </td>
+						<td> 65,000 </td>
+						<td> 26,100 </td>
 					</tr>
 				</tbody>
 			</table>
