--- a/historical-person/legal-professional/sehn-jan/index.html
+++ b/historical-person/legal-professional/sehn-jan/index.html
@@ -41,254 +41,220 @@
 			<p>
 				Sehn consistently sought to defend and promote the propagandistic paradigm that the Soviets had created with their initial investigations at the camp. Before Sehn began his work, a mixed Polish-Soviet <q>expert commission</q> had <q>determined</q> that the Auschwitz <a href="/instruments/tool/crematoria/index.html#Auschwitz_Main">crematoria</a> had the capacity to cremate four million bodies &mdash; and indeed did so. This way, this mock commission confirmed the camp&rsquo;s preordained death toll of four million. One member of this four-member Polish-Soviet commission was Sehn&rsquo;s right-hand man Roman Dawidowski.
 			</p>
-			<table class="alternate ctab" style="width: 56.268%; height: 794px;" cellspacing="0" cellpadding="1">
+			<table class="table">
 				<caption>Witness Claims on Cremation Capacity of Birkenau Crematoria</caption>
-				<tbody>
-					<tr style="height: 32px;">
-						<th style="width: 28.6278%; height: 32px;" bgcolor="#e5e5e5">Witness</th>
-						<th style="width: 23.2213%; height: 32px;" bgcolor="#e5e5e5">Daily Capacity</th>
+				<thead>
+					<tr>
+						<th>Witness</th>
+						<th>Daily Capacity</th>
 					</tr>
-					<tr style="height: 32px;">
+				</thead>
+				<tbody>
+					<tr>
 						<td style="width: 28.6278%; height: 32px; border-bottom: 1px solid black;"><a href="/instruments/tool/crematoria/index.html#Auschwitz_Birkenau">Reality</a></td>
-						<td style="width: 23.2213%; height: 32px; border-bottom: 1px solid black;"> 
+						<td style="width: 23.2213%; height: 32px; border-bottom: 1px solid black;">
 						<p>
 							<i>ca. 1,000</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 61px;">
-						<td style="width: 28.6278%; height: 61px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/dragon-szlama/index.html">S. Dragon</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 61px;"> 
-						<p>
+												</td>
+						<td>
+
 							10,000-12,000<br />
 							<i>11,350</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/mandelbaum-henryk/index.html">H. Mandelbaum</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							<i>38,800</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/tauber-henryk/index.html">H. Tauber</a> (Soviet)
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							<i>11,600</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/tauber-henryk/index.html">H. Tauber</a> (Polish)
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							<i>7,800</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/fliamenbaum-david/index.html">D. Fliamenbaum</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							<i>8,830</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/jankowski-stanislaw/index.html">S. Jankowski</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							<i>8,000</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/nyiszli-miklos/index.html">M. Nyiszli</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							20,000/<i>9,930</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/paisikovic-dov/index.html">D. Paisikovic</a> (Austria)
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							<i>18,400/41,400</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/paisikovic-dov/index.html">D. Paisikovic</a> (Germany)
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							<i>9,460</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/rosenblum-joshuah/index.html">J. Rosenblum</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							<i>36,000/26,490</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/muller-filip/index.html">F. Müller</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							10,000/<i>9,930</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/sackar-josef/index.html">J. Sackar</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							20,000
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/gabai-dario/index.html">D. Gabai</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							<i>8,590/8,830</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/victim/cohen-leon/index.html">L. Cohen</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							<i>9,200</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/perpetrator/hoss-rudolf/index.html">R. Höss</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							7,000
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px; border-bottom: 1px solid black;"> 
+					<tr>
+						<td style="width: 28.6278%; height: 32px; border-bottom: 1px solid black;">
 						<p>
 							<a href="/witness/perpetrator/mussfeldt-erich/index.html">E. Mussfeldt</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px; border-bottom: 1px solid black;"> 
+												</td>
+						<td style="width: 23.2213%; height: 32px; border-bottom: 1px solid black;">
 						<p>
 							<i>6,620</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							Soviet experts
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							9,000/<i>9,530</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>
+
 							<a href="/witness/expert/dawidowski-roman/index.html">R. Dawidowski</a>
-						</p>
-						</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+												</td>
+						<td>
+
 							8,000/<i>11,470</i>
-						</p>
-						</td>
+												</td>
 					</tr>
-					<tr style="height: 32px;">
-						<td style="width: 28.6278%; height: 32px;">J. Sehn</td>
-						<td style="width: 23.2213%; height: 32px;"> 
-						<p>
+					<tr>
+						<td>J. Sehn</td>
+						<td>
+
 							12,000/<i>8,830</i>
-						</p>
-						</td>
-					</tr>
-					<tr style="height: 61px;">
-						<td class="tf" style="width: 51.8491%; height: 61px;" colspan="2"> 
-						<p>
-							Roman typeface: explicitly stated; <i>italic typeface</i>: calculated from other data given by the witness.
-						</p>
-						</td>
+												</td>
 					</tr>
 				</tbody>
+				<tfoot>
+				<tr>
+					<td colspan="2">
+					<p>
+						Roman typeface: explicitly stated; <i>italic typeface</i>: calculated from other data given by the witness.
+					</p>
+					</td>
+				</tr>
+				</tfoot>
 			</table>
 			<p>
 				Many of the witnesses interviewed by Sehn also confirmed the camp&rsquo;s preordained death toll. They either did so explicitly or by claiming absurdly inflated deportation numbers, gassing and/or cremation capacities that resulted in the expected casualty figures (see the table). This <q><a href="/concept/convergence-of-evidence/index.html">convergence of evidence</a></q> on the same lie proves the orchestrated nature of all these witness testimonies. (See in this regard also the entry on <a href="/manipulation/cremation-propaganda/index.html">cremation propaganda</a>.)
