move the U entries

--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -553,9 +553,9 @@
 				<li><a href="/historical-person/politician/turner-harald/index.html">Turner, Harald</a></li>
 				<li><a href="/witness/victim/turowski-eugeniusz/index.html">Turowski, Eugeniusz</a></li>
 				<li><a href="/concept/typhus/index.html">typhus</a></li>
-				<li><a href="/historical-person/politician/uhlenbrock-kurt/index.html">Uhlenbrock, Kurt</a></li>
-				<li><a href="/location/country/ukraine/index.html">Ukraine</a></li>
-				<li><a href="/witness/false-witness/uthgenannt-otto/index.html">Uthgenannt, Otto</a></li>
+				<li><a href="/u/uhlenbrock-kurt/index.html">Uhlenbrock, Kurt</a></li>
+				<li><a href="/u/ukraine/index.html">Ukraine</a></li>
+				<li><a href="/u/uthgenannt-otto/index.html">Uthgenannt, Otto</a></li>
 				<li><a href="/witness/victim/vaillant-couturier-marie-claude/index.html">Vaillant-Couturier, Marie-Claude</a></li>
 				<li><a href="/witness/victim/van-den-bergh-siegfried/index.html">van den Bergh, Siegfried</a></li>
 				<li><a href="/redirect/van-herwaarden-maria/index.html">van Herwaarden, Maria</a></li>
