--- a/u/index.html
+++ b/u/index.html
@@ -30,7 +30,7 @@
 
 <script>
 	$( "#masthead" ).load( "/_assets/includes/masthead.htm" );
-//	$( "#breadcrumbs" ).load( "nav.htm" );
+	$( "#breadcrumbs" ).load( "nav.htm" );
 	$( "#aside" ).load( "/_assets/includes/aside.htm" );
 	$( "#nav-hhp" ).load( "/_assets/includes/nav.htm" );</script>
 <script src="/_assets/bootstrap3_player/bootstrap3_player.js"></script>
