--- a/witness/perpetrator/becker-august/index.html
+++ b/witness/perpetrator/becker-august/index.html
@@ -35,7 +35,7 @@
 				This letter was presented by the prosecution during the International Military Tribunal as part of Document PS-501 (<a href="/bibliography/index.html#IMT"><i>IMT</i></a>, Vol. 26, pp. 102-105). The docket attached to it states that the letter was obtained from the British prosecution&rsquo;s office, but that its origins are unknown.
 			</p>
 			<p>
-				The letter pretends to be an inspection and maintenance report of gas vans used by <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a> D and C in <a href="/location/country/ukraine/index.html">Ukraine</a> to execute Jews. It is riddled with absurdities which prove conclusively that this is a fake report unrelated to any possible real-world events:
+				The letter pretends to be an inspection and maintenance report of gas vans used by <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a> D and C in <a href="/u/ukraine/index.html">Ukraine</a> to execute Jews. It is riddled with absurdities which prove conclusively that this is a fake report unrelated to any possible real-world events:
 			</p>
 			<ul>
 				<li>The document identifies gas vans of a second series as Saurer vehicles. However, there is no trace of any <q>first-series gas vans</q> not being Saurer vehicles deployed by the <a href="/instruments/tool/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a>. All vehicles in extant documents that are (falsely) associated with gas vans have been Saurer vehicles.</li>
