--- a/a/nav.htm
+++ b/a/nav.htm
@@ -1,5 +1,7 @@
 <!-- #bbpragma doctype="html5" root_element="body" encoding="utf-8" --><ol class="breadcrumb">
-	<li><a class="btn btn-default" href="/index.html"><span class="glyphicon glyphicon-home"></span></a></li>
+	<li><a href="https://www.historiography-project.com/index.php"><i class="glyphicon glyphicon-home"></i></a></li>
+	<li><a href="https://www.historiography-project.com/books/index.php">Books</a></li>
+	<li><i><a href="/index.html">Encyclopedia</a></i></li>
 	<li class="active">A</li>
 </ol>
 
